reintroducing hub-parent